# sept-18-month-c-mastery-plan

./: README.md
week1project/: CMakeLists.txt
week1project/src/: cl_args.c  cl_args.h
week1project/test/: test_cl_args.c
